--- a/country-detail/country-detail.html
+++ b/country-detail/country-detail.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Where in the world?</title>
+  <title>Country detail</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap" rel="stylesheet">
-  <link href="./styles.css" rel="stylesheet">
-  <script src="./main.js" defer></script>
+  <link href="../styles.css" rel="stylesheet">
+  <link href="./country-detail.css" rel="stylesheet">
+  <script src="./country-detail.js" defer></script>
 </head>
 <body>
   <main>
@@ -19,13 +20,22 @@
         <span>Dark Mode</span>
       </button>
     </header>
-    <section class="input-section">
-      <div class="search-input-layout">
-        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#858585" d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
-        <input id="searchCountry" class="input" type="text" placeholder="Search for a country...">
+    <div >
+      <button class="custom-btn" onclick="returnToIndex()">
+        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
+        <span>Back</span>
+      </button>
+    </div>
+
+    <section class="detail-layout">
+      <div>
+        <img id="countryFlag">
       </div>
-    </section>
-    <section id="flags-layout" class="flags-layout">
+      <div>
+        <h1 id="countryName"></h1>
+        <div id="countryInfo"></div>
+        <div id="borders" class="borderLayout"></div>
+      </div>
     </section>
   </main>
 </body>
